Add authentication support for single nodes and replica sets
Includes a new provider (user) for setting up new users for a database,
which is then used by other providers to create a default admin user,
if authentication support is enabled.
Also added support for creating and using a key file in replica sets.

--- a/templates/default/mongod.conf.erb
+++ b/templates/default/mongod.conf.erb
@@ -33,7 +33,7 @@ journalCommitInterval = <%= node['mongodb']['journal_commit_interval'] %>
 
 # Authentication
 auth = true
-keyFile = <%= node['mongodb']['auth_keyfile'] %>
+<% unless node['mongodb']['auth_keyfile'].empty? %>keyFile = <%= node['mongodb']['auth_keyfile'] %><% end %>
 <% end %>
 <% unless @replica_set.empty? %>
 
